[gd_scene load_steps=2 format=2]

[ext_resource path="res://ConnectionScene.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Host" type="Node" parent="."]

[node name="IP" type="TextEdit" parent="Host"]
margin_left = 463.0
margin_top = 203.0
margin_right = 709.0
margin_bottom = 243.0

[node name="Label" type="Label" parent="Host"]
margin_left = 490.0
margin_top = 103.0
margin_right = 530.0
margin_bottom = 117.0
text = "Host"

[node name="Host" type="Button" parent="Host"]
margin_left = 460.0
margin_top = 268.0
margin_right = 472.0
margin_bottom = 288.0
text = "Host"

[node name="HostBegin" type="Button" parent="Host"]
margin_left = 272.0
margin_top = 110.0
margin_right = 284.0
margin_bottom = 130.0
text = "Host Begin"

[node name="Join" type="Node" parent="."]

[node name="IP" type="TextEdit" parent="Join"]
margin_left = 453.0
margin_top = 499.0
margin_right = 699.0
margin_bottom = 539.0

[node name="Label" type="Label" parent="Join"]
margin_left = 464.0
margin_top = 327.0
margin_right = 504.0
margin_bottom = 358.0
text = "Join
"

[node name="Join" type="Button" parent="Join"]
margin_left = 455.0
margin_top = 436.0
margin_right = 467.0
margin_bottom = 456.0
text = "Join"

[node name="Name" type="TextEdit" parent="."]
margin_left = 461.0
margin_top = 146.0
margin_right = 701.0
margin_bottom = 186.0

[node name="Error" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0

[connection signal="pressed" from="Host/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="Host/HostBegin" to="." method="_on_HostBegin_pressed"]
[connection signal="pressed" from="Join/Join" to="." method="_on_Join_pressed"]
